--- a/BussinesskycPending.html
+++ b/BussinesskycPending.html
@@ -173,13 +173,13 @@
                   <span class="lan-2">Team Management</span></a>
                 </li>
 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title active" href="#">
                   <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
                     <span class="lan-6">Bussiness Management</span></a>
                   <ul class="sidebar-submenu">
                     <li>
                       <a href="BussinesskycPending.html">
-                        <i class="fa fa-hourglass-half text-white me-3" aria-hidden="true"></i> KYC Pending
+                        <i class="fa fa-hourglass-half text-white me-3 active" aria-hidden="true"></i> KYC Pending
                       </a>
                     </li>
                     <li>
@@ -387,80 +387,6 @@
                                 </ul>
                               </div>
                             </td>
-                          </tr>
-
-                          <tr>
-                            <th scope="row">4</th>
-                            <td>Perfect Tiles</td>
-                            <td>Morbi, Gujarat</td>
-                            <td>Premium</td>
-                            <td>+91 9012345678</td>
-                            <td>PERF222</td>
-                            <td>
-                              <div class="dropdown">
-                                <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  <i class="fa fa-ellipsis-v"></i>
-                                </button>
-                                <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="businessListingView.html"><i class="fa fa-eye text-primary me-2"></i>View</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-check text-success me-2"></i>KYC Done</a></li>
-                                  <li>
-                                    <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#kycpeddingRejectModal">
-                                      <i class="fa fa-times text-danger me-2"></i>KYC Reject
-                                    </a>
-                                  </li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
-                                </ul>
-                              </div>
-                            </td>
-                          </tr>
-
-                          <tr>
-                            <th scope="row">5</th>
-                            <td>Urban Fit Gym</td>
-                            <td>Rajkot, Gujarat</td>
-                            <td>Standard</td>
-                            <td>+91 9871234560</td>
-                            <td>UFG7890</td>
-                            <td>
-                              <div class="dropdown">
-                                <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  <i class="fa fa-ellipsis-v"></i>
-                                </button>
-                                <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="businessListingView.html"><i class="fa fa-eye text-primary me-2"></i>View</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-check text-success me-2"></i>KYC Done</a></li>
-                                  <li>
-                                    <a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#kycpeddingRejectModal">
-                                      <i class="fa fa-times text-danger me-2"></i>KYC Reject
-                                    </a>
-                                  </li>
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
-                                </ul>
-                              </div>
-                            </td>
-                          </tr>
-
-                          <tr>
-                            <th scope="row">6</th>
-                            <td>Green Leaf Foods</td>
-                            <td>Bhavnagar, Gujarat</td>
-                            <td>Basic</td>
-                            <td>+91 9123450987</tdd>
-                            <td>GLF5643</td>
-                            <td>
-                            <div class="dropdown">
-                              <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="fa fa-ellipsis-v"></i>
-                              </button>
-                              <ul class="dropdown-menu">
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-ban text-danger me-2"></i>Block</a></li>
-                               <li><a class="dropdown-item" href="businessListingView.html"><i class="fa fa-eye text-info me-2"></i>View</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-check-circle text-success me-2"></i>Image Approve</a></li>
-                              </ul>
-                            </div>
-                          </td>
                           </tr>
                       </tbody>
                     </table>
