--- a/ChannelkycPending.html
+++ b/ChannelkycPending.html
@@ -196,13 +196,13 @@
                 </li>
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
-                  <a class="sidebar-link sidebar-title" href="#">
+                  <a class="sidebar-link sidebar-title active" href="#">
                     <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
                     <span class="lan-6">Channel Partner</span>
                   </a>
                   <ul class="sidebar-submenu">
                     <li>
-                      <a href="ChannelkycPending.html">
+                      <a href="ChannelkycPending.html" class="active">
                         <i class="fa fa-hourglass-half text-white me-3" aria-hidden="true"></i>KYC Pending
                       </a>
                     </li>
