--- a/ChannelkycReject.html
+++ b/ChannelkycReject.html
@@ -196,7 +196,7 @@
                 </li>
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
-                  <a class="sidebar-link sidebar-title" href="#">
+                  <a class="sidebar-link sidebar-title active" href="#">
                     <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
                     <span class="lan-6">Channel Partner</span>
                   </a>
@@ -212,7 +212,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="ChannelkycReject.html">
+                      <a href="ChannelkycReject.html" class="active">
                         <i class="fa fa-times-circle text-white me-3" aria-hidden="true"></i>KYC Reject
                       </a>
                     </li>
