--- a/addcategoryManagement.html
+++ b/addcategoryManagement.html
@@ -145,13 +145,13 @@
                 
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
-                  <a class="sidebar-link sidebar-title" href="#">
+                  <a class="sidebar-link sidebar-title active" href="#">
                     <i class="fa fa-tags text-white" aria-hidden="true"></i>
                     <span class="lan-4">Category Management</span>
                   </a>
                   <ul class="sidebar-submenu">
                     <li>
-                      <a href="categoryManagementList.html">
+                      <a href="categoryManagementList.html" class="active">
                         <i class="fa fa-folder text-white me-3" aria-hidden="true"></i>Category
                       </a>
                     </li>
@@ -312,7 +312,7 @@
                                   </div>
                                   <div class="col-sm-6">
                                     <label class="form-label" for="customUrl">Sequence</label>
-                                    <input class="form-control" id="customUrl" type="URL" placeholder=" Sequence" required="">
+                                    <input class="form-control" id="customUrl" type="number" placeholder=" Sequence" required="">
                                     <div class="valid-feedback">Looks good!</div>
                                   </div>
                                   <div class="col-sm-12 mb-3">
