--- a/addteam.html
+++ b/addteam.html
@@ -168,7 +168,7 @@
                   </ul>
                 </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="teamlist.html">
+                  <a class="sidebar-link active" href="teamlist.html">
                   <i class="fa fa-users text-white" aria-hidden="true"></i>
                   <span class="lan-2">Team Management</span></a>
                 </li>
@@ -378,12 +378,12 @@
                                   </div>
                                   <div class="col-sm-6">
                                     <label class="form-label" for="customName">Zip Code<span class="txt-danger">*</span></label>
-                                    <input class="form-control" id="customName" type="number"  required="">
+                                    <input class="form-control" id="customZip" type="text" inputmode="numeric" pattern="[0-9]*" required>
                                     <div class="valid-feedback">Looks good!</div>
                                   </div>
                                   <div class="col-sm-12">
                                     <label class="form-label" for="customName">Description<span class="txt-danger">*</span></label>
-                                    <input class="form-control" id="customName" type="number"  required="">
+                                    <input class="form-control" id="customName" type="text"  required="">
                                     <div class="valid-feedback">Looks good!</div>
                                   </div>
                                   <div class="col-12 text-center mt-3">
