--- a/businessListing.html
+++ b/businessListing.html
@@ -173,7 +173,7 @@
                   <span class="lan-2">Team Management</span></a>
                 </li>
 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title active" href="#">
                   <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
                     <span class="lan-6">Bussiness Management</span></a>
                   <ul class="sidebar-submenu">
@@ -184,7 +184,7 @@
                     </li>
                     <li>
                       <a href="businessListing.html">
-                        <i class="fa fa-building text-white me-3" aria-hidden="true"></i> Business
+                        <i class="fa fa-building text-white me-3 active" aria-hidden="true"></i> Business
                       </a>
                     </li>
                     <li>
@@ -383,78 +383,6 @@
                                 </ul>
                               </div>
                             </td>
-                          </tr>
-
-                          <tr>
-                            <th scope="row">4</th>
-                            <td>Perfect Tiles</td>
-                            <td>Morbi, Gujarat</td>
-                            <td>Premium</td>
-                            <td>+91 9012345678</td>
-                            <td>2025-06-07</td>
-                            <td>PERF222</td>
-                            <td><a href="https://www.google.com/maps?q=35.689487,139.691706" target="_blank" title="Tokyo"><i class="fa fa-map-marker text-primary fs-5"></i></a></td>
-                            <td>
-                              <div class="dropdown">
-                                <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  <i class="fa fa-ellipsis-v"></i>
-                                </button>
-                                <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-ban text-danger me-2"></i>Block</a></li>
-                               <li><a class="dropdown-item" href="businessListingView.html"><i class="fa fa-eye text-info me-2"></i>View</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-check-circle text-success me-2"></i>Image Approve</a></li>
-                                </ul>
-                              </div>
-                            </td>
-                          </tr>
-
-                          <tr>
-                            <th scope="row">5</th>
-                            <td>Urban Fit Gym</td>
-                            <td>Rajkot, Gujarat</td>
-                            <td>Standard</td>
-                            <td>+91 9871234560</td>
-                            <td>2025-05-30</td>
-                            <td>UFG7890</td>
-                            <td><a href="https://www.google.com/maps?q=51.507351,-0.127758" target="_blank" title="London"><i class="fa fa-map-marker text-primary fs-5"></i></a></td>
-                            <td>
-                              <div class="dropdown">
-                                <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  <i class="fa fa-ellipsis-v"></i>
-                                </button>
-                                <ul class="dropdown-menu">
-                                  <li><a class="dropdown-item" href="#"><i class="fa fa-ban text-danger me-2"></i>Block</a></li>
-                               <li><a class="dropdown-item" href="businessListingView.html"><i class="fa fa-eye text-info me-2"></i>View</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-check-circle text-success me-2"></i>Image Approve</a></li>
-                                </ul>
-                              </div>
-                            </td>
-                          </tr>
-
-                          <tr>
-                            <th scope="row">6</th>
-                            <td>Green Leaf Foods</td>
-                            <td>Bhavnagar, Gujarat</td>
-                            <td>Basic</td>
-                            <td>+91 9123450987</td>
-                            <td>2025-06-02</td>
-                            <td>GLF5643</td>
-                            <td><a href="https://www.google.com/maps?q=35.689487,139.691706" target="_blank" title="Tokyo"><i class="fa fa-map-marker text-primary fs-5"></i></a></td>
-                            <td>
-                            <div class="dropdown">
-                              <button class="custom-padding btn btn-secondary" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="fa fa-ellipsis-v"></i>
-                              </button>
-                              <ul class="dropdown-menu">
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-ban text-danger me-2"></i>Block</a></li>
-                               <li><a class="dropdown-item" href="businessListingView.html"><i class="fa fa-eye text-info me-2"></i>View</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-trash text-danger me-2"></i>Delete</a></li>
-                               <li><a class="dropdown-item" href="#"><i class="fa fa-check-circle text-success me-2"></i>Image Approve</a></li>
-                              </ul>
-                            </div>
-                          </td>
                           </tr>
                       </tbody>
                     </table>
