--- a/categoryManagement.html
+++ b/categoryManagement.html
@@ -314,7 +314,7 @@
                                   </div>
                                   <div class="col-sm-6">
                                     <label class="form-label" for="customUrl">Sequence</label>
-                                    <input class="form-control" id="customUrl" type="URL" placeholder=" Sequence" required="">
+                                    <input class="form-control" id="customUrl" type="number" placeholder=" Sequence" required="">
                                     <div class="valid-feedback">Looks good!</div>
                                   </div>
                                   <div class="col-sm-12"> 
