--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                   </div>
                 </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="index.html">
+                  <a class="sidebar-link active" href="index.html">
                   <i class="fa fa-bar-chart text-white" aria-hidden="true"></i>
                   <span class="lan-2">Dasboard</span></a>
                 </li>
