--- a/inquiry.html
+++ b/inquiry.html
@@ -244,7 +244,7 @@
                   </li>
                  <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
-                  <a class="sidebar-link" href="inquiry.html">
+                  <a class="sidebar-link active" href="inquiry.html">
                     <i class="fa fa-question-circle text-white me-2" aria-hidden="true"></i>
                     <span class="lan-2">Enquiry Management</span>
                   </a>
@@ -252,7 +252,7 @@
 
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
-                  <a class="sidebar-link" href="endUser.html">
+                  <a class="sidebar-link active" href="endUser.html">
                     <i class="fa fa-user text-white me-2" aria-hidden="true"></i>
                     <span class="lan-2">End User</span>
                   </a>
@@ -260,7 +260,7 @@
 
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
-                  <a class="sidebar-link" href="paymentHistory.html">
+                  <a class="sidebar-link active" href="paymentHistory.html">
                     <i class="fa fa-credit-card text-white me-2" aria-hidden="true"></i>
                     <span class="lan-2">Payment History</span>
                   </a>
@@ -379,47 +379,7 @@
                           </td>
                         </tr>
 
-                        <tr>
-                          <th scope="row">4</th>
-                          <td>Yogi Wellness Center</td>
-                          <td>+91 99876 54321</td>
-                          <td>Yoga Session Info</td>
-                          <td class="d-flex justify-content-center">
-                            <ul class="action">
-                              <li class="edit">
-                                <a href="#" class="bg-danger p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit">
-                                  <i class="fa fa-trash-o text-white" aria-hidden="true"></i>
-                                </a>
-                              </li>
-                              <li class="business">
-                                <a href="#" class="bg-primary p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="top" title="User Profile">
-                                  <i class="fa fa-user text-white" aria-hidden="true"></i>
-                                </a>
-                              </li>
-                            </ul>
-                          </td>
-                        </tr>
-
-                        <tr>
-                          <th scope="row">5</th>
-                          <td>Smart Tours Agency</td>
-                          <td>+91 91234 56780</td>
-                          <td>Tour Package</td>
-                          <td class="d-flex justify-content-center">
-                            <ul class="action">
-                              <li class="edit">
-                                <a href="#" class="bg-danger p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit">
-                                  <i class="fa fa-trash-o text-white" aria-hidden="true"></i>
-                                </a>
-                              </li>
-                              <li class="business">
-                                <a href="#" class="bg-primary p-2 rounded" data-bs-toggle="tooltip" data-bs-placement="top" title="User Profile">
-                                  <i class="fa fa-user text-white" aria-hidden="true"></i>
-                                </a>
-                              </li>
-                            </ul>
-                          </td>
-                        </tr>
+                       
                       </tbody>
                     </table>
                   </div>
