--- a/popularCategoryList.html
+++ b/popularCategoryList.html
@@ -146,7 +146,7 @@
                 
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
-                  <a class="sidebar-link sidebar-title" href="#">
+                  <a class="sidebar-link sidebar-title active" href="#">
                     <i class="fa fa-tags text-white" aria-hidden="true"></i>
                     <span class="lan-4">Category Management</span>
                   </a>
@@ -162,7 +162,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="popularCategoryList.html">
+                      <a href="popularCategoryList.html" class="active">
                         <i class="fa fa-star text-white me-3" aria-hidden="true"></i>Popular Category
                       </a>
                     </li>
