--- a/refferalHistroy.html
+++ b/refferalHistroy.html
@@ -220,7 +220,7 @@
                 </li>
                 <li class="sidebar-list">
                     <i class="fa fa-thumb-tack"></i>
-                    <a class="sidebar-link sidebar-title" href="#">
+                    <a class="sidebar-link sidebar-title active" href="#">
                       <i class="fa fa-users text-white" aria-hidden="true"></i>
                       <span class="lan-6">Referral</span>
                     </a>
@@ -236,7 +236,7 @@
                         </a>
                       </li>
                       <li>
-                        <a href="refferalHistroy.html">
+                        <a href="refferalHistroy.html" class="active">
                           <i class="fa fa-history text-white me-3" aria-hidden="true"></i>Referral History
                         </a>
                       </li>
@@ -347,30 +347,7 @@
                             </a>
                           </td>
                         </tr>
-                        <tr>
-                          <th scope="row">4</th>
-                          <td>Neha Sharma</td>
-                          <td>Channel Partner</td>
-                          <td>3</td>
-                          <td>REFNEHA33</td>
-                          <td>
-                            <a href="refferalActionHistroy.html" class="btn btn-info btn-sm">
-                              <i class="fa fa-history me-1"></i>History
-                            </a>
-                          </td>
-                        </tr>
-                        <tr>
-                          <th scope="row">5</th>
-                          <td>Kunal Bhatt</td>
-                          <td>Business</td>
-                          <td>6</td>
-                          <td>REFKUNAL66</td>
-                          <td>
-                            <a href="refferalActionHistroy.html" class="btn btn-info btn-sm">
-                              <i class="fa fa-history me-1"></i>History
-                            </a>
-                          </td>
-                        </tr>
+                        
                       </tbody>
                     </table>
                   </div>
