--- a/teamlist.html
+++ b/teamlist.html
@@ -168,7 +168,7 @@
                   </ul>
                 </li>
                 <li class="sidebar-list"><i class="fa fa-thumb-tack"> </i>
-                  <a class="sidebar-link" href="teamlist.html">
+                  <a class="sidebar-link active" href="teamlist.html">
                   <i class="fa fa-users text-white" aria-hidden="true"></i>
                   <span class="lan-2">Team Management</span></a>
                 </li>
