--- a/ChannelPartner.html
+++ b/ChannelPartner.html
@@ -196,7 +196,7 @@
                 </li>
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
-                  <a class="sidebar-link sidebar-title" href="#">
+                  <a class="sidebar-link sidebar-title active" href="#">
                     <i class="fa fa-handshake-o text-white" aria-hidden="true"></i>
                     <span class="lan-6">Channel Partner</span>
                   </a>
@@ -207,7 +207,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="ChannelPartner.html">
+                      <a href="ChannelPartner.html" class="active">
                         <i class="fa fa-users text-white me-3" aria-hidden="true"></i>Channel Partner
                       </a>
                     </li>
