--- a/CustomerWallet.html
+++ b/CustomerWallet.html
@@ -220,7 +220,7 @@
                 </li>
                 <li class="sidebar-list">
                     <i class="fa fa-thumb-tack"></i>
-                    <a class="sidebar-link sidebar-title" href="#">
+                    <a class="sidebar-link sidebar-title active" href="#">
                       <i class="fa fa-users text-white" aria-hidden="true"></i>
                       <span class="lan-6">Referral</span>
                     </a>
@@ -231,7 +231,7 @@
                         </a>
                       </li>
                       <li>
-                        <a href="CustomerWallet.html">
+                        <a href="CustomerWallet.html" class="active">
                           <i class="fa fa-money text-white me-3" aria-hidden="true"></i>Customer Wallet
                         </a>
                       </li>
