--- a/businessListingView.html
+++ b/businessListingView.html
@@ -173,7 +173,7 @@
                   <span class="lan-2">Team Management</span></a>
                 </li>
 
-                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+                <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title active" href="#">
                   <i class="fa fa-briefcase text-white" aria-hidden="true"></i>
                     <span class="lan-6">Bussiness Management</span></a>
                   <ul class="sidebar-submenu">
@@ -183,7 +183,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="businessListing.html">
+                      <a href="businessListing.html" class="active">
                         <i class="fa fa-building text-white me-3" aria-hidden="true"></i> Business
                       </a>
                     </li>
