--- a/subCategory.html
+++ b/subCategory.html
@@ -145,7 +145,7 @@
                 
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
-                  <a class="sidebar-link sidebar-title" href="#">
+                  <a class="sidebar-link sidebar-title active" href="#">
                     <i class="fa fa-tags text-white" aria-hidden="true"></i>
                     <span class="lan-4">Category Management</span>
                   </a>
@@ -156,7 +156,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="subCategorylist.html">
+                      <a href="subCategorylist.html" class="active">
                         <i class="fa fa-folder-open text-white me-3" aria-hidden="true"></i>Sub Category
                       </a>
                     </li>
@@ -329,7 +329,7 @@
                                   </div>
                                   <div class="col-sm-12">
                                     <label class="form-label" for="customUrl">Sequence</label>
-                                    <input class="form-control" id="customUrl" type="URL" placeholder=" Sequence" required="">
+                                    <input class="form-control" id="customUrl" type="number" placeholder=" Sequence" required="">
                                     <div class="valid-feedback">Looks good!</div>
                                   </div>
                                   <div class="col-12 text-center mt-3">
