--- a/subCategorylist.html
+++ b/subCategorylist.html
@@ -145,7 +145,7 @@
                 
                 <li class="sidebar-list">
                   <i class="fa fa-thumb-tack"></i>
-                  <a class="sidebar-link sidebar-title" href="#">
+                  <a class="sidebar-link sidebar-title active" href="#">
                     <i class="fa fa-tags text-white" aria-hidden="true"></i>
                     <span class="lan-4">Category Management</span>
                   </a>
@@ -156,7 +156,7 @@
                       </a>
                     </li>
                     <li>
-                      <a href="subCategorylist.html">
+                      <a href="subCategorylist.html" class="active">
                         <i class="fa fa-folder-open text-white me-3" aria-hidden="true"></i>Sub Category
                       </a>
                     </li>
