ck editer add  and for and id add in input

--- a/popularCategory.html
+++ b/popularCategory.html
@@ -322,9 +322,9 @@
                                     <h4>Select Sub Category</h4>
                                     <div class="row mt-3">
                                         <div class="col-sm-5">
-                                    <label class="form-label" for="customState-wizard">Sub Category<span
+                                    <label class="form-label" for="Sub-Category-wizard">Sub Category<span
                                       class="txt-danger">*</span></label>
-                                    <select class="form-select" id="customState-wizard" required="">
+                                    <select class="form-select" id="Sub-Category-wizard" required="">
                                       <option selected="" disabled="" value="">Select Sub Category</option>
                                       <option>All Option</option>
                                       <option>AC Service & Repair</option>  
